--- a/default.project.json
+++ b/default.project.json
@@ -9,6 +9,9 @@
       },
       "roblox_packages": {
         "$path": "roblox_packages"
+      },
+      "data": {
+        "$path": "resources/data"
       }
     },
 
